Monster Hit Effect Work

--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="State.h" />
     <ClInclude Include="Structure.h" />
     <ClInclude Include="Sword.h" />
+    <ClInclude Include="SwordHitEffect.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="KeyMgr.h" />
     <ClInclude Include="MathLib.h" />
@@ -257,6 +258,7 @@
     <ClCompile Include="State.cpp" />
     <ClCompile Include="Structure.cpp" />
     <ClCompile Include="Sword.cpp" />
+    <ClCompile Include="SwordHitEffect.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="KeyMgr.cpp" />
     <ClCompile Include="MyEngine.cpp" />
