Skull To Player Attack HitBox Work

--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -173,13 +173,16 @@
     <ClInclude Include="LineCollider.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterAttState.h" />
+    <ClInclude Include="MonsterEffect.h" />
     <ClInclude Include="MonsterFactory.h" />
     <ClInclude Include="MonsterIdleState.h" />
     <ClInclude Include="MonsterPatrolState.h" />
     <ClInclude Include="MonsterState.h" />
+    <ClInclude Include="MonsterSwordEffect.h" />
     <ClInclude Include="MonsterTraceState.h" />
     <ClInclude Include="MouseMgr.h" />
     <ClInclude Include="NPC.h" />
+    <ClInclude Include="PlayerEffect.h" />
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="ShortSword.h" />
     <ClInclude Include="State.h" />
@@ -246,13 +249,16 @@
     <ClCompile Include="LineCollider.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterAttState.cpp" />
+    <ClCompile Include="MonsterEffect.cpp" />
     <ClCompile Include="MonsterFactory.cpp" />
     <ClCompile Include="MonsterIdleState.cpp" />
     <ClCompile Include="MonsterPatrolState.cpp" />
     <ClCompile Include="MonsterState.cpp" />
+    <ClCompile Include="MonsterSwordEffect.cpp" />
     <ClCompile Include="MonsterTraceState.cpp" />
     <ClCompile Include="MouseMgr.cpp" />
     <ClCompile Include="NPC.cpp" />
+    <ClCompile Include="PlayerEffect.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="ShortSword.cpp" />
     <ClCompile Include="State.cpp" />
