--- a/MyEngine/MyEngine/MyEngine.vcxproj.filters
+++ b/MyEngine/MyEngine/MyEngine.vcxproj.filters
@@ -223,9 +223,6 @@
     <Filter Include="Engine\GameObject\Monster\AI\MonsterState\MonsterIdleState">
       <UniqueIdentifier>{66a5a81e-1b9b-4c16-8354-1563850f31ae}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\GameObject\Monster\GiantSkullWarrior">
-      <UniqueIdentifier>{927fa401-5ba2-4573-a647-16b9dc53efca}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\GameObject\Monster\MonsterFactory">
       <UniqueIdentifier>{13989927-249f-4bc5-b66f-f183b5ca0918}</UniqueIdentifier>
     </Filter>
@@ -292,6 +289,24 @@
     </Filter>
     <Filter Include="Engine\GameObject\MapComponent\EventObject\MonsterSpawnEvent\GiantSkullSpawnEvent">
       <UniqueIdentifier>{f286898c-97db-43b8-bfa2-331b870ab7ed}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\Melee_Monster">
+      <UniqueIdentifier>{aa7bd9b2-c837-4c45-ad3f-2927810b2bb0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\Melee_Monster\GiantSkullWarrior">
+      <UniqueIdentifier>{927fa401-5ba2-4573-a647-16b9dc53efca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\Range_Monster">
+      <UniqueIdentifier>{a55c28c6-2369-4ab3-8ee2-26e0925f1e49}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\Range_Monster\GiantBat">
+      <UniqueIdentifier>{7b28c41a-730f-4726-aab0-d486c30935e7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\Monster\Range_Monster\RedGiantBat">
+      <UniqueIdentifier>{f10591fc-c3e9-4e21-a401-088a481a98ae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\GameObject\MapComponent\EventObject\MonsterSpawnEvent\RedGiantBatSpawnEvent">
+      <UniqueIdentifier>{0a607b95-41e4-45eb-bac2-509602f26404}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -491,7 +506,7 @@
       <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterIdleState</Filter>
     </ClInclude>
     <ClInclude Include="GiantSkullWarrior.h">
-      <Filter>Engine\GameObject\Monster\GiantSkullWarrior</Filter>
+      <Filter>Engine\GameObject\Monster\Melee_Monster\GiantSkullWarrior</Filter>
     </ClInclude>
     <ClInclude Include="MonsterFactory.h">
       <Filter>Engine\GameObject\Monster\MonsterFactory</Filter>
@@ -525,6 +540,15 @@
     </ClInclude>
     <ClInclude Include="GiantSkullSpawnEvent.h">
       <Filter>Engine\GameObject\MapComponent\EventObject\MonsterSpawnEvent\GiantSkullSpawnEvent</Filter>
+    </ClInclude>
+    <ClInclude Include="GiantBat.h">
+      <Filter>Engine\GameObject\Monster\Range_Monster\GiantBat</Filter>
+    </ClInclude>
+    <ClInclude Include="RedGiantBat.h">
+      <Filter>Engine\GameObject\Monster\Range_Monster\RedGiantBat</Filter>
+    </ClInclude>
+    <ClInclude Include="RedGiantBatSpawnEvent.h">
+      <Filter>Engine\GameObject\MapComponent\EventObject\MonsterSpawnEvent\RedGiantBatSpawnEvent</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -731,7 +755,7 @@
       <Filter>Engine\GameObject\Monster\AI\MonsterState\MonsterIdleState</Filter>
     </ClCompile>
     <ClCompile Include="GiantSkullWarrior.cpp">
-      <Filter>Engine\GameObject\Monster\GiantSkullWarrior</Filter>
+      <Filter>Engine\GameObject\Monster\Melee_Monster\GiantSkullWarrior</Filter>
     </ClCompile>
     <ClCompile Include="MonsterFactory.cpp">
       <Filter>Engine\GameObject\Monster\MonsterFactory</Filter>
@@ -762,6 +786,15 @@
     </ClCompile>
     <ClCompile Include="GiantSkullSpawnEvent.cpp">
       <Filter>Engine\GameObject\MapComponent\EventObject\MonsterSpawnEvent\GiantSkullSpawnEvent</Filter>
+    </ClCompile>
+    <ClCompile Include="GiantBat.cpp">
+      <Filter>Engine\GameObject\Monster\Range_Monster\GiantBat</Filter>
+    </ClCompile>
+    <ClCompile Include="RedGiantBat.cpp">
+      <Filter>Engine\GameObject\Monster\Range_Monster\RedGiantBat</Filter>
+    </ClCompile>
+    <ClCompile Include="RedGiantBatSpawnEvent.cpp">
+      <Filter>Engine\GameObject\MapComponent\EventObject\MonsterSpawnEvent\RedGiantBatSpawnEvent</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
